# portals-cloud

./: .env.compose  .gitignore  .gitmodules  .npmrc  IMPLEMENTATION_PLAN.md  PRINCIPLES.md  README.md  RELEASE.md  VISION.md  docker-compose.yml  package-lock.json  package.json  pnpm-workspace.yaml  tsconfig.base.json
.changeset/: esm-build-infra.md
control-plane/: .env.compose  Cargo.toml  README.md  docker-compose.yml  elasticmq.conf  init.py
control-plane/api/: Cargo.toml
control-plane/api/smithy/: README.md  events.smithy  lorecloud.smithy
control-plane/api/src/: lib.rs  main.rs  metrics.rs
control-plane/api/src/auth/: idempotency.rs  middleware.rs  mod.rs
control-plane/api/src/http/: handlers.rs  mod.rs
control-plane/api/tests/: api_tests.rs
control-plane/config/: Cargo.toml
control-plane/config/src/: lib.rs
control-plane/controllers/: Cargo.toml
control-plane/controllers/audience-session/: Cargo.toml
control-plane/controllers/audience-session/src/: lib.rs
control-plane/controllers/audit/: Cargo.toml
control-plane/controllers/audit/src/: lib.rs
control-plane/controllers/billing/: Cargo.toml
control-plane/controllers/billing/src/: lib.rs
control-plane/controllers/capability-deployment/: Cargo.toml
control-plane/controllers/capability-deployment/src/: lib.rs
control-plane/controllers/channel/: Cargo.toml
control-plane/controllers/channel/src/: lib.rs
control-plane/controllers/gc/: Cargo.toml
control-plane/controllers/gc/src/: lib.rs
control-plane/controllers/organization/: Cargo.toml
control-plane/controllers/organization/src/: lib.rs
control-plane/controllers/permissions/: Cargo.toml
control-plane/controllers/permissions/src/: lib.rs
control-plane/controllers/quota/: Cargo.toml
control-plane/controllers/quota/src/: lib.rs
control-plane/controllers/repository/: Cargo.toml
control-plane/controllers/repository/src/: lib.rs
control-plane/controllers/resolver/: Cargo.toml
control-plane/controllers/resolver/src/: lib.rs
control-plane/controllers/runtime-scheduling/: Cargo.toml
control-plane/controllers/runtime-scheduling/src/: lib.rs
control-plane/controllers/session/: Cargo.toml
control-plane/controllers/session/src/: lib.rs
control-plane/controllers/src/: lib.rs
control-plane/controllers/src/audience-session/: Cargo.toml
control-plane/controllers/src/audience-session/src/: lib.rs
control-plane/controllers/src/audit/: Cargo.toml
control-plane/controllers/src/audit/src/: lib.rs
control-plane/controllers/src/billing/: Cargo.toml
control-plane/controllers/src/billing/src/: lib.rs
control-plane/controllers/src/capability-deployment/: Cargo.toml
control-plane/controllers/src/capability-deployment/src/: lib.rs
control-plane/controllers/src/channel/: Cargo.toml
control-plane/controllers/src/channel/src/: lib.rs
control-plane/controllers/src/gc/: Cargo.toml
control-plane/controllers/src/gc/src/: lib.rs
control-plane/controllers/src/organization/: mod.rs
control-plane/controllers/src/permissions/: Cargo.toml
control-plane/controllers/src/permissions/src/: lib.rs
control-plane/controllers/src/quota/: Cargo.toml
control-plane/controllers/src/quota/src/: lib.rs
control-plane/controllers/src/repository/: mod.rs
control-plane/controllers/src/resolver/: Cargo.toml
control-plane/controllers/src/resolver/src/: lib.rs
control-plane/controllers/src/runtime-scheduling/: Cargo.toml
control-plane/controllers/src/runtime-scheduling/src/: lib.rs
control-plane/controllers/src/session/: Cargo.toml
control-plane/controllers/src/session/src/: lib.rs
control-plane/controllers/src/storage/: Cargo.toml
control-plane/controllers/src/storage/src/: lib.rs
control-plane/controllers/src/world/: Cargo.toml
control-plane/controllers/src/world/src/: lib.rs
control-plane/controllers/storage/: Cargo.toml
control-plane/controllers/storage/src/: lib.rs
control-plane/controllers/world/: Cargo.toml
control-plane/controllers/world/src/: lib.rs
control-plane/events/: Cargo.toml
control-plane/events/src/: event_bus.rs  event_types.rs  lib.rs  outbox.rs
control-plane/models/: Cargo.toml
control-plane/models/src/: lib.rs
control-plane/observability/: Cargo.toml
control-plane/observability/src/: lib.rs
control-plane/persistence/: Cargo.toml
control-plane/persistence/migrations/: 001_init.sql  002_add_org_finalizers.sql
control-plane/persistence/src/: lib.rs  memory.rs  outbox_relay.rs  sqlx_store.rs  state_store.rs
control-plane/providers/: Cargo.toml
control-plane/providers/aws/: Cargo.toml
control-plane/providers/aws/src/: circuit_breaker.rs  compute.rs  identity.rs  lib.rs  networking.rs  repository.rs  secret.rs  storage.rs
control-plane/providers/mock/: Cargo.toml
control-plane/providers/mock/src/: lib.rs
control-plane/providers/src/: lib.rs
control-plane/providers/src/aws/: mod.rs  s3_storage.rs
control-plane/providers/src/mock/: mod.rs  repository.rs  secret.rs
control-plane/providers/src/trait/: mod.rs  repository.rs  secret.rs
control-plane/providers/trait/: Cargo.toml
control-plane/providers/trait/src/: circuit_breaker.rs  lib.rs
control-plane/reconciler/: Cargo.toml
control-plane/reconciler/src/: lib.rs
control-plane/scripts/: build.sh  dev.sh  docker-build.sh  generate-key.sh  migrate.sh  test-contract.sh  test-integration.sh  test-unit.sh  test.sh
control-plane/server/: Cargo.toml
control-plane/server/src/: main.rs
control-plane/tests/: Cargo.toml
control-plane/tests/src/: lib.rs
control-plane/tests/src/common/: mod.rs
control-plane/tests/src/contract/: mod.rs  repository_contract.rs  storage_contract.rs
control-plane/tests/src/e2e/: infrastructure_lifecycle.rs  mod.rs  repository_lifecycle.rs
control-plane/tests/src/integration/: controller_integration.rs  eventbus_integration.rs  mod.rs  persistence_integration.rs  provider_integration.rs
control-plane/tests/src/unit/: circuit_breaker_tests.rs  config_tests.rs  controller_tests.rs  mod.rs
control-plane/workflows/: Cargo.toml
control-plane/workflows/src/: lib.rs
(+273 files in other folders)
