[workspace]
members = [
    "models",
    "api",
    "controllers",
    "events",
    "persistence",
    "providers",
    "reconciler",
    "observability",
    "config",
    "workflows",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.34", features = ["full", "time"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
tracing-appender = "0.2"
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
uuid = { version = "1.6", features = ["v4", "serde"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace", "request-id", "util"] }
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "json", "uuid", "chrono"] }
ed25519-dalek = { version = "2.2", features = ["pem"] }
base64 = "0.22"
jsonwebtoken = "9"
sha2 = "0.10"
rand = "0.8"
reqwest = { version = "0.12", features = ["json"] }
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"
http-body-util = "0.1"
# Metrics
axum-prometheus = "0.7"
metrics = "0.24"
metrics-exporter-prometheus = "0.16"
# Rate limiting
tower_governor = "0.8"
