[workspace]
members = [
    "api",
    "config",
    "controllers",
    "controllers/audit",
    "controllers/quota",
    "controllers/permissions",
    "controllers/billing",
    "controllers/gc",
    "controllers/session",
    "controllers/storage",
    "controllers/world",
    "controllers/channel",
    "controllers/capability-deployment",
    "controllers/runtime-scheduling",
    "controllers/resolver",
    "controllers/audience-session",
    "events",
    "models",
    "observability",
    "persistence",
    "providers",
    "reconciler",
    "server",
    "tests",
    "workflows"
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["Portals Cloud Platform Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/portalshq/portals-cloud"

[workspace.dependencies]
tokio = { version = "1.34", features = ["full", "time"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
tracing-appender = "0.2"
opentelemetry = "0.21"
opentelemetry-otlp = "0.14"
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio", "metrics"] }
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
uuid = { version = "1.6", features = ["v4", "serde"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace", "request-id", "util"] }
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "json", "uuid", "chrono"] }
ed25519-dalek = { version = "2.2", features = ["pem"] }
base64 = "0.22"
jsonwebtoken = "9"
sha2 = "0.10"
rand = "0.8"
reqwest = { version = "0.12", features = ["json"] }
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"
http-body-util = "0.1"
# Metrics
axum-prometheus = "0.7"
metrics = "0.24"
metrics-exporter-prometheus = "0.16"
# Rate limiting
tower_governor = "0.8"
# Configuration
config = "0.14"
toml = "0.8"
# AWS SDK (only in providers/aws)
aws-config = "1.1"
aws-sdk-s3 = "1.4"
aws-sdk-sqs = "1.4"
aws-sdk-ecs = "1.4"
aws-sdk-lambda = "1.4"
aws-sdk-iam = "1.4"
aws-sdk-route53 = "1.4"
aws-sdk-secretsmanager = "1.4"
aws-sdk-sfn = "1.4"
# Testing
tokio-test = "0.4"