[package]
name = "api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "lorecloud-control-plane"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
sqlx = { workspace = true }
ed25519-dalek = { workspace = true }
base64 = { workspace = true }
jsonwebtoken = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
clap = { workspace = true }
models = { path = "../models" }
events = { path = "../events" }
persistence = { path = "../persistence" }
providers = { path = "../providers" }
controllers = { path = "../controllers" }
reconciler = { path = "../reconciler" }
observability = { path = "../observability" }
config = { path = "../config" }
workflows = { path = "../workflows" }
axum-prometheus = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
tower_governor = { workspace = true }
redis = { version = "0.27", optional = true }

[features]
default = []
redis-idempotency = ["redis"]

[dev-dependencies]
http-body-util = "0.1"
tokio = { version = "1", features = ["full", "test-util"] }
