[package]
name = "controllers"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
models = { path = "../models" }
providers = { path = "../providers" }
events = { path = "../events" }
persistence = { path = "../persistence" }
