[package]
name = "observability"
version.workspace = true
edition.workspace = true

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
opentelemetry.workspace = true
opentelemetry-otlp = { workspace = true, features = ["metrics"] }
opentelemetry_sdk.workspace = true
thiserror.workspace = true
