[package]
name = "control-plane-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "control-plane-server"
path = "src/main.rs"

[dependencies]
async-trait.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
reconciler = { path = "../reconciler" }
persistence = { path = "../persistence" }
events = { path = "../events" }
config = { path = "../config" }
observability = { path = "../observability" }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = { version = "1.0", features = ["full"] }
