[package]
name = "control-plane-tests"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
aws-config = { workspace = true }
clap = { workspace = true }
models = { path = "../models" }
reconciler = { path = "../reconciler" }
persistence = { path = "../persistence" }
events = { path = "../events" }
control-plane-provider-trait = { path = "../providers/trait" }
control-plane-mock-provider = { path = "../providers/mock" }
config = { path = "../config" }
observability = { path = "../observability" }

[features]
e2e = []
