[package]
name = "control-plane-aws-provider"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
aws-config.workspace = true
aws-sdk-s3.workspace = true
aws-sdk-ecs.workspace = true
aws-sdk-lambda.workspace = true
aws-sdk-iam.workspace = true
aws-sdk-route53.workspace = true
aws-sdk-secretsmanager.workspace = true
reconciler = { path = "../../reconciler" }
control-plane-provider-trait = { path = "../trait" }
