[package]
name = "control-plane-mock-provider"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
chrono.workspace = true
uuid.workspace = true
rand = "0.8"
reconciler = { path = "../../reconciler" }
control-plane-provider-trait = { path = "../trait" }
