[package]
name = "permissions-controller"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

# Local dependencies
reconciler = { path = "../../../reconciler" }
persistence = { path = "../../../persistence" }
events = { path = "../../../events" }
models = { path = "../../../models" }
